02-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: prod-app
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8501
